--- a/_config.yml
+++ b/_config.yml
@@ -11,19 +11,19 @@ mode: dark # default theme "dark" | "light"
 
 # Profile settings
 author:
-  name: Jekyll Klisé # author name
+  name: Vedant Jhawar # author name
   bio: >- # tell to the world
     The minimalist Jekyll theme, light and dark mode support, for running a personal site and blog, 
     meet Klisé theme at <a href="https://github.com/piharpi/jekyll-klise" target="_blank" rel="noopener">@github</a>.
-  username: username # general username
-  github: github_username # github username
-  twitter: twitter_username # twitter username
-  facebook: facebook_username # facebook username
-  email: your-email@email.com # email adress
-  avatar: /assets/img/avatar.jpg # change with your own avatar
+  username: xflare # general username
+  github: vejhawar0 # github username
+  # twitter: twitter_username # twitter username
+  # facebook: facebook_username # facebook username
+  email: ved.jhawar@gmail.com # email adress
+  # avatar: /assets/img/avatar.jpg # change with your own avatar
 
 # URL settings
-url: "https://klise.now.sh" #
+url: "https://vejhawar0.github.io" #
 baseurl:
 permalink: /:title/
 google_analytics: # leave it blank if not wish
